Comment fixed + changes to project