@@ -1,6 +1,9 @@
 package aiss.BitbucketMiner.BitbucketMiner.service;
 
+import aiss.BitbucketMiner.BitbucketMiner.model.Commit.BitBucketCommit;
 import aiss.BitbucketMiner.BitbucketMiner.model.Project;
+import aiss.BitbucketMiner.BitbucketMiner.model.gitminer.MinerCommit;
+import aiss.BitbucketMiner.BitbucketMiner.model.gitminer.MinerIssue;
 import aiss.BitbucketMiner.BitbucketMiner.model.gitminer.MinerProject;
 import aiss.BitbucketMiner.BitbucketMiner.transformer.ProjectTransformer;
 import com.fasterxml.jackson.core.JsonProcessingException;
@@ -21,21 +24,20 @@ public class ProjectService {
     @Autowired
     RestTemplate restTemplate;
 
-    public List<MinerProject> getProjects(String workspace) {
+    public List<MinerProject> getProjects(String workspace,
+                                          List<MinerCommit> allCommits,
+                                          List<MinerIssue> allIssues) {
         List<MinerProject> result = new ArrayList<>();
 
         String uri = String.format("https://api.bitbucket.org/2.0/workspaces/%s/projects", workspace);
 
         HttpHeaders headers = new HttpHeaders();
-        headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON));
+        headers.setAccept(List.of(MediaType.APPLICATION_JSON));
         HttpEntity<Void> requestEntity = new HttpEntity<>(headers);
 
         try {
             ResponseEntity<JsonNode> response = restTemplate.exchange(
-                    uri,
-                    HttpMethod.GET,
-                    requestEntity,
-                    JsonNode.class
+                    uri, HttpMethod.GET, requestEntity, JsonNode.class
             );
 
             JsonNode valuesNode = response.getBody().get("values");
@@ -44,22 +46,30 @@ public class ProjectService {
 
             if (projects != null) {
                 for (Project p : projects) {
-                    result.add(ProjectTransformer.toGitMinerProject(p));
+                    // Filtra commits e issues que pertenecen a este proyecto
+                    List<MinerCommit> projectCommits = allCommits.stream()
+                            .filter(c -> c.getId().equals(p.getUuid())) // o getId()
+                            .toList();
+
+                    List<MinerIssue> projectIssues = allIssues.stream()
+                            .filter(i -> i.getId().equals(p.getUuid()))
+                            .toList();
+
+                    result.add(ProjectTransformer.toGitMinerProject(p, projectCommits, projectIssues));
                 }
             }
 
         } catch (JsonProcessingException e) {
             System.err.println("Error al parsear JSON: " + e.getMessage());
         } catch (Exception e) {
-            System.err.println("⚠ Error en la llamada a Bitbucket: " + e.getMessage());
+            System.err.println(" Error en la llamada a Bitbucket: " + e.getMessage());
         }
 
         return result;
     }
-
-    public int sendProjectsToGitMiner(String workspace) {
-        List<MinerProject> projects = getProjects(workspace);
-        String gitMinerUrl = "http://localhost:8080/projects"; // Ajusta si tu endpoint es diferente
+    public int sendProjectsToGitMiner(String workspace ,List<MinerCommit> commits, List<MinerIssue> issues) {
+        List<MinerProject> projects = getProjects(workspace, commits, issues );
+        String gitMinerUrl = "http://localhost:8080/gitminer/projects"; // Ajusta si tu endpoint es diferente
 
         int sent = 0;
         for (MinerProject project : projects) {
@@ -71,14 +81,14 @@ public class ProjectService {
                 ResponseEntity<String> response = restTemplate.postForEntity(gitMinerUrl, request, String.class);
 
                 if (response.getStatusCode().is2xxSuccessful()) {
-                    System.out.println("✔ Proyecto enviado correctamente: " + project.getId());
+                    System.out.println("Proyecto enviado correctamente: " + project.getId());
                     sent++;
                 } else {
-                    System.err.println("✖ Error al enviar proyecto " + project.getId() + ": " + response.getStatusCode());
+                    System.err.println("Error al enviar proyecto " + project.getId() + ": " + response.getStatusCode());
                 }
 
             } catch (Exception e) {
-                System.err.println("⚠ Error al enviar proyecto " + project.getId() + ": " + e.getMessage());
+                System.err.println("Error al enviar proyecto " + project.getId() + ": " + e.getMessage());
             }
         }
 
